...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.129" />

    <Button
        android:id="@+id/main_join_group_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="208dp"
        android:backgroundTint="@color/secondary"
        android:text="@string/join_a_group"
        android:textColor="@color/textOnPrimary"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_settings"
        app:tint="@color/primary" />

    <TextView
        android:id="@+id/test_user_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
